# ai_architect

./: .env  main.py  pyproject.toml  requirements.txt
prompt-engineering/: reactprompt.ipynb
