[project]
name = "ai-architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "ollama>=0.6.1",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
